--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,147 @@ ul {
   margin: 4rem 0;
   color: #878787; }
   .main-footer a > i {
+*,
+*:before,
+*:after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+body {
+  overflow-x: hidden; }
+
+.main {
+  background: #f1f1ef;
+  width: 100vw; }
+  .main .box {
+    background: #fff;
+    width: 85%;
+    border-radius: 10px;
+    height: 7rem;
+    margin: 0 auto;
+    display: flex;
+    position: relative;
+    z-index: 5;
+    bottom: 50px;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.6); }
+    @media (max-width: 599px) {
+      .main .box {
+        height: 10rem;
+        position: relative;
+        bottom: 80px;
+        background: #fff; } }
+    .main .box .inputs {
+      display: flex;
+      flex-grow: 1;
+      justify-content: space-evenly;
+      align-items: center;
+      border-radius: 10px; }
+      @media (max-width: 599px) {
+        .main .box .inputs {
+          display: flex;
+          flex-direction: column; } }
+      .main .box .inputs .search, .main .box .inputs .select__Input {
+        line-height: 3.8;
+        height: 36px;
+        width: 17rem;
+        padding-left: 0.5rem;
+        border-radius: 10px;
+        outline: none;
+        border: 1px solid rgba(0, 0, 0, 0.4); }
+        @media (max-width: 599px) {
+          .main .box .inputs .search, .main .box .inputs .select__Input {
+            height: 2rem;
+            width: 15rem; } }
+      .main .box .inputs .position {
+        margin-left: 3rem;
+        color: grey; }
+        @media (max-width: 599px) {
+          .main .box .inputs .position {
+            display: none; } }
+
+table {
+  width: 80%;
+  height: 100px;
+  margin: 0 auto;
+  text-align: left;
+  border-collapse: collapse;
+  cursor: pointer; }
+  @media (max-width: 599px) {
+    table {
+      display: none;
+      background: yellow; } }
+  table .table__header {
+    height: 100px;
+    font-weight: 900; }
+  table td {
+    padding: 28px; }
+  table .table__row {
+    padding: 8px;
+    border-bottom: 1px solid black; }
+    table .table__row:hover {
+      background: white;
+      border: 1px transparent solid;
+      transform: scale(1.036);
+      overflow: hidden;
+      border-radius: 20px;
+      padding-left: 0; }
+    table .table__row:hover td:first-child {
+      border-radius: 10px 0 0 10px;
+      border-collapse: collapse !important;
+      border: 1px 0 1px 0; }
+    table .table__row:hover td:last-child {
+      border-radius: 0 10px 10px 0;
+      border-collapse: collapse !important;
+      border: 1px 0 1px 0; }
+    table .table__row:hover tr {
+      overflow: hidden; }
+  table .table__row:hover > .table__row--mod, table .table__row:hover > .table__row--i {
+    transform: scale(1.1);
+    color: lightseagreen; }
+
+.mob-tab {
+  display: none; }
+  @media (max-width: 599px) {
+    .mob-tab {
+      display: block; } }
+  .mob-tab .mob--tab {
+    border-bottom: 1px solid black; }
+  .mob-tab .mob--tab:last-child {
+    border-bottom: none;
+    padding-bottom: 23px; }
+  .mob-tab .position {
+    color: aqua; }
+    @media (max-width: 599px) {
+      .mob-tab .position {
+        margin: 10px 0 .5px 3px; } }
+  @media (max-width: 599px) {
+    .mob-tab {
+      display: block;
+      padding: 1px 0 0 5px; } }
+  @media (max-width: 599px) {
+    .mob-tab .dep-cities {
+      margin-bottom: 15px;
+      padding: 10px 0 0 5px; } }
+
+.section-footer {
+  padding: 4rem 0; }
+  .section-footer .container {
+    max-width: 100%;
+    margin: auto;
+    padding: 0 2rem;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-gap: 1rem; }
+  .section-footer .footer-image {
+    margin-bottom: 6rem; }
+  .section-footer .contain1 {
+    width: 40vw; }
+  .section-footer p {
+    margin-bottom: 1rem; }
+  .section-footer ul li {
+    margin-bottom: 0.5rem; }
+  .section-footer a > i {
     margin-right: 2rem;
     margin-top: 9rem;
     color: #505050; }
