--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,7 @@
 @import 'components/_carousel';
 @import 'components/_slider';
 
+@import 'layouts/_career_list_table_&_input';
 @import 'layouts/_footer';
 @import 'layouts/_forms';
 @import 'layouts/_grid';
