--- a/scss/abstracts/mixins.scss
+++ b/scss/abstracts/mixins.scss
@@ -1,14 +1,14 @@
 @mixin conTain {
-    
-
        max-width: 100%;
-            margin: auto;
-           
-            padding: 0 2rem;
+       margin: auto;
+       padding: 0 2rem;
 }
 
 @mixin supportIcon {
+    margin-left: 0.5rem;
     
-        margin-left: 0.5rem;
-    
+}
+
+@mixin for-phone-only {
+  @media (max-width: 599px) { @content; } 
 }
