done-working-on-the-reusable-components

--- a/components/footer.html
+++ b/components/footer.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <title>Footer</title>
 </head>
@@ -18,11 +18,12 @@
                     <img src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412229/samples/figma%20homepage/s2c7y0uy86hmk4bsr6zv.png>
                     <div> <img class="footer-image" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/m87et8yszesshavwinf0.png"><span style="margin-right:0.5rem">ENGLISH</span><img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568639192/samples/figma%20homepage/jp5v0zr7mtuisfme6icx.png"></div>
 
-                    <div> <a href="https://facebook.com"><i class="fa fa-facebook"></i></a>
-                        <a href="https://twitter.com"><i class="fa fa-twitter"></i></a>
-                        <a href="https://instagram.com"><i class="fa fa-instagram"></i></a>
-                        <a href="https://linkedin.com"><i class="fa fa-linkedin"></i></a>
-                        <a href="https://youtube.com"><i class="fa fa-youtube"></i></a>
+                    <div> <a href="https://facebook.com"><i class="fab fa-facebook"></i></a>
+                        <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
+                        <a href="https://instagram.com"><i class="fab fa-instagram"></i></a>
+                        <a href="https://linkedin.com"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://youtube.com"><i class="fab fa-youtube"></i></a>
+                        <a href="https://medium.com"><i class="fab fa-medium"></i></a>
                     </div>
                 </div>
 
@@ -33,7 +34,7 @@
                             <li> The app</li>
                             <li> Features</li>
                             <li> Deals</li>
-                            <li> Privacy policy</li>
+                            <li> <a style="color:grey;text-decoration:none;" href="../pages/homepagesubnav.html">Homepage Subnav</a> </li>
                             <li>Terms of service</li>
                         </ul>
                     </div>
@@ -44,7 +45,7 @@
                             <li> The data</li>
                             <li> Investors</li>
                             <li> Locations</li>
-                            <li> Departments</li>
+                            <li><a style="color:grey;text-decoration:none;" href="../pages/careerdetails.html"> Careerdetails</a></li>
                         </ul>
                     </div>
 
@@ -55,7 +56,7 @@
                             <li> Lifestyle</li>
                             <li> Values</li>
                             <li> Humans</li>
-                          <li>  <a href="./../pages/careerdetails.html"> Career Details<span style="background:coral;color:white;border-radius: 0.2rem;padding:0.1rem;">47</span></a></li>
+                            <li> <a style="color:grey;text-decoration:none;" href="./../pages/careerlist.html">Career<span style="background:coral;color:white;border-radius: 0.2rem;padding:0.1rem;margin-left:1rem;">47</span></a></li>
                         </ul>
                     </div>
 
@@ -88,34 +89,31 @@
     </footer>
 
     <div class="media-footer">
-      <img class="media-hop" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152594/samples/new%20folder/d44fypvhzbshckeixtfl.png>
-<ul>
-    <li class="media-line">Company<span style="background:coral;color:white;border-radius: 0.2rem;padding:0.1rem;">21</span><img class="media-push1" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152619/samples/new%20folder/yxb2buurny5yrprcslrx.png></li>
-                            <li class="media-line">People<img class="media-push2" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152619/samples/new%20folder/yxb2buurny5yrprcslrx.png></li>
-                            <li class="media-line">Support<img class="media-push3" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152619/samples/new%20folder/yxb2buurny5yrprcslrx.png></li>
-                            <li>Insights<img class="media-push4" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152619/samples/new%20folder/yxb2buurny5yrprcslrx.png></li>
-                        </ul>
-                        <div class="media-lang">
-                            <p>Language<span><img class="media-push5" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568639192/samples/figma%20homepage/jp5v0zr7mtuisfme6icx.png"></p></span></div>
-                        <div>
-                                <img  style="width: 5rem" src="https://cdns.iconmonstr.com/wp-content/assets/preview/2018/240/iconmonstr-medium-1.png">
-                            <a href="https://facebook.com"><i class="fa fa-facebook"></i></a>
-                            <a href="https://twitter.com"><i class="fa fa-twitter"></i></a>
-                            <a href="https://instagram.com"><i class="fa fa-instagram"></i></a>
-                            <a href="https://linkedin.com"><i class="fa fa-linkedin"></i></a>
-                            <a href="https://youtube.com"><i class="fa fa-youtube"></i></a>
-                          <a href="https://medium.com">  <i class="fa fa-medium"></i></a>
-                           
+        <img class="media-hop" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152594/samples/new%20folder/d44fypvhzbshckeixtfl.png>
+        <ul>
+            <li class="media-line">Company<span style="background:coral;color:white;border-radius: 0.2rem;padding:0.1rem;margin-left:1rem;">21</span><img class="media-push1" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152619/samples/new%20folder/yxb2buurny5yrprcslrx.png></li>
+            <li class="media-line">People<img class="media-push2" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152619/samples/new%20folder/yxb2buurny5yrprcslrx.png></li>
+            <li class="media-line">Support<img class="media-push3" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152619/samples/new%20folder/yxb2buurny5yrprcslrx.png></li>
+            <li>Insights<img class="media-push4" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152619/samples/new%20folder/yxb2buurny5yrprcslrx.png></li>
+        </ul>
+        <div class="media-lang">
+            <p>Language<span><img class="media-push5" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568639192/samples/figma%20homepage/jp5v0zr7mtuisfme6icx.png"></p></span></div>
+        <div style="margin-bottom:2rem;">
 
-                        </div>
-                        <a class="media-terms" href="#">Terms of Service</a>
+            <a href="https://facebook.com"><i class="fab fa-facebook"></i></a>
+            <a href="https://twitter.com"><i class="fab fa-twitter"></i></a>
+            <a href="https://instagram.com"><i class="fab fa-instagram"></i></a>
+            <a href="https://linkedin.com"><i class="fab fa-linkedin"></i></a>
+            <a href="https://youtube.com"><i class="fab fa-youtube"></i></a>
+            <a href="https://medium.com"><i class="fab fa-medium"></i></a>
 
-                        <p class="media-copy">&copy 2018 Hopper Inc.</p>
-                    </div>
+        </div>
+        <a style="color:grey;text-decoration:none;" class="media-terms" href="#">Terms of Service</a>
 
-                    
+        <p class="media-copy">&copy 2018 Hopper Inc.</p>
+    </div>
 
-                    <script src=js/main.js></script>
+    <script src=js/main.js></script>
 
 </body>
 
