--- a/components/header-b.html
+++ b/components/header-b.html
@@ -13,18 +13,35 @@
     <header>
         <div class="restriction">
             <nav class="navbar">
-                <div><img class="headerimg" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569234945/samples/qfmhk9jkjdtfmugaag6i.png style="background:coral;padding: 0.5rem;"><span style="display:inline-block">Back</span></div>
+                <div class="header-b-back">
+                    <div>
+                        <a href="./../pages/homepage.html"><img style="border:1px thin grey; margin-right:1rem;" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569424775/samples/new%20folder/ja5bxt95i1hqrswxrrlh.png"></a>
+                    </div>
+                    <div>
+                        <p>Back</p>
+                    </div>
+                </div>
                 <div>
                     <ul class="navbar-ul">
-                        <li><a href="#company">Company</a></li>
-                        <li class="people-nav"><a href="#people">People</a></li>
-                        <li><a href="#support">Support<img class="support-nav" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/qkyithncohhx6pvmgotw.png></a></li>
-                        <li class="button-nav"><a href="#">Send app to your phone</a></li>
+                        <li><a href="./../pages/company.html">COMPANY</a></li>
+                        <li class="people-nav"><a href="people.html">PEOPLE</a></li>
+                        <li><a href="#support">SUPPORT<img class="support-nav" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/qkyithncohhx6pvmgotw.png></a></li>
+                        <li class="send-navb"><a href="#">Send app to your phone</a></li>
                     </ul>
                 </div>
             </nav>
+
+        </div>
+
+        <div class="media-header">
+            <img class="media-header1" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152594/samples/new%20folder/zzf0xbkcjr4a4gjjfgyt.png>
+            <img class="media-header2" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569423612/samples/new%20folder/khcighwt6rzex3ttaqrv.svg">
+
+            <img class="media-header3" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569152594/samples/new%20folder/ta274azqkawrcgi9i5qn.png">
+
         </div>
     </header>
+
     <script src=js/main.js></script>
 </body>
 
