--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -4,37 +4,60 @@
     margin-top: 3rem;
     margin-left: 5rem;
     overflow: hidden;
+    background-color: $midGrey;
+    .header-b-back {
+        display: flex;
+        margin-left: 1rem;
+        margin-top: 1rem;
+    }
+    .headerimg {
+        margin-top: 1rem;
+    }
     .navbar-ul {
         display: flex;
         margin-left: 28rem;
         width: 60vw;
+        margin-top: 1rem;
         a {
             margin-right: 1.5rem;
+            text-decoration: none;
+            color: $white;
         }
         .people-nav {
-            border-right: 0.5px solid grey;
+            border-right: 0.5px solid $white;
+            height: 1.5rem;
             margin-right: 1.5rem;
         }
         .send-nav {
-            border: 1px solid #01AAE4;
+            border: 1px solid $white;
             border-radius: 8px;
             height: 2.5rem;
             width: 16rem;
             padding-left: 1.3rem;
             padding-top: 0.2rem;
+            margin-top: -0.2rem;
+        }
+        .send-navb {
+            border: 1px solid $white;
+            border-radius: 8px;
+            height: 2.2rem;
+            width: 16rem;
+            padding-left: 1.3rem;
+            padding-top: 0.2rem;
+            margin-top: -0.4rem;
+            margin-bottom: 1rem;
         }
         .support-nav {
             margin-left: 0.5rem;
             margin-bottom: 0.3rem;
+            color: white;
         }
     }
-    @media(max-width:500px) {
-        .navbar-ul {
-            display: none;
-        }
-        .headerimg {
-            display: none;
-        }
+}
+
+@media (max-width:500px) {
+    .navbar {
+        display: none;
     }
 }
 
@@ -50,9 +73,10 @@
         }
         .media-header2 {
             margin-left: 7rem;
+            margin-top: 0.5rem;
         }
         .media-header3 {
-            margin-left: 12rem;
+            margin-left: 10rem;
             margin-bottom: 0.2rem;
         }
     }
