done with the footer and header

--- a/components/footer.html
+++ b/components/footer.html
@@ -53,7 +53,7 @@
                         <p>People</p>
                         <ul>
                             <li> Mission</li>
-                            <li> Lifestyle</li>
+                            <li><a style="color:grey;text-decoration:none;" href="../pages/companysubnav.html">Company-sub</a></li>
                             <li> Values</li>
                             <li> Humans</li>
                             <li> <a style="color:grey;text-decoration:none;" href="./../pages/careerlist.html">Career<span style="background:coral;color:white;border-radius: 0.2rem;padding:0.1rem;margin-left:1rem;">47</span></a></li>
