correction on the header/footer

--- a/components/header-b.html
+++ b/components/header-b.html
@@ -15,10 +15,10 @@
             <nav class="navbar">
                 <div class="header-b-back">
                     <div>
-                        <a href="./../pages/homepage.html"><img style="border:1px thin grey; margin-right:1rem;" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569424775/samples/new%20folder/ja5bxt95i1hqrswxrrlh.png"></a>
+                        <a href="./../pages/homepage.html"><img class="header-back-img" style="margin-right:1rem;" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569424775/samples/new%20folder/ja5bxt95i1hqrswxrrlh.png"></a>
                     </div>
                     <div>
-                        <p>Back</p>
+                        <p style="color: white;">Back</p>
                     </div>
                 </div>
                 <div>
