--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -4,11 +4,15 @@
     margin-top: 3rem;
     margin-left: 5rem;
     overflow: hidden;
-    background-color: $midGrey;
+    background-color: $coral;
     .header-b-back {
         display: flex;
         margin-left: 1rem;
         margin-top: 1rem;
+        .header-back-img{
+            border:thin solid white;
+            padding:0.3rem;
+        }
     }
     .headerimg {
         margin-top: 1rem;
